--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,19 @@
 [tool.poetry]
 name = "project-updater"
-version = "0.1.0"
+version = "0.1.1"
 description = "Git project updater"
 authors = ["Ivan Migunov <im@fckg.ru>"]
 readme = "README.md"
-packages = [{include = "project_updater", from = "src"}]
+packages = [
+    { include = "project_updater", from = "src" },
+    { include = "project_scanner", from = "src" },
+]
 include = ["LICENSE"]
 
 [tool.poetry.scripts]
 project-updater = "project_updater:__main__.main"
 project-updater-cli = "project_updater.cli:commands.run"
+project-scanner = "project_scanner.main:main"
 
 
 [tool.poetry.dependencies]
