--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,21 +10,25 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.12
 
     - name: Install poetry
-      run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+      run: curl -sSL https://install.python-poetry.org | python3 -
 
     - name: Install dependencies
-      run: |
-        poetry install
+      run: poetry install
 
     - name: Run Pytest
-      run: |
-        poetry run pytest
+      run: poetry run pytest --cov --cov-report xml .
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+        slug: imfckg/project-updater
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
