--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ mypy = "^1.8.0"
 [tool.poetry.group.test.dependencies]
 coverage = "^7.4.3"
 pytest = "^8.0.2"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
